...
        android:drawableTop="@drawable/home_btn_schedule" />
	<!--    <Button android:id="@+id/home_btn_map"
        style="@style/DashboardButton"
        android:text="@string/btn_map"
		android:drawableTop="@drawable/home_btn_map" />
-->
    <Button android:id="@+id/home_btn_sessions"
        style="@style/DashboardButton"
        android:text="@string/btn_sessions"
		android:drawableTop="@drawable/home_btn_sessions" />
    <Button android:id="@+id/home_btn_starred"
        style="@style/DashboardButton"
        android:text="@string/btn_starred"
        android:drawableTop="@drawable/home_btn_starred" />
	<!--    <Button android:id="@+id/home_btn_vendors"
        style="@style/DashboardButton"
        android:text="@string/btn_vendors"
...
