...
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    style="@style/ListItemContainer">
    <!-- Star button for marking sessions as favorites -->
    <CheckBox android:id="@+id/star_button"
        android:layout_gravity="top|right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/btn_star"
        android:background="@null"
        android:clickable="false"
...
        <LinearLayout android:id="@+id/session_title_row"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView android:id="@+id/session_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/ListItemTitle"
                />
            <TextView android:id="@+id/session_bof_label"
...
